# cc-arm

./: .bazelrc  .clang-format  BUILD.bazel  LICENSE  MODULE.bazel  WORKSPACE.bazel
cli/: BUILD.bazel  main.cc  main.h
common/: BUILD.bazel  util.cc  util.h
parser/common/: BUILD.bazel  token.h
parser/lexer/: BUILD.bazel  lexer.cc  lexer.h
test/common/: BUILD.bazel  util.cc  util.h
test/lexer/: BUILD.bazel  lexer_test.cc
test/lexer/test_minimal/: minimal.txt
